tests/derivation/core/norec t-pi--.. noext 002/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type `Builtin.(===)` is not a top-level data definition

DerivedGen:1
 06 | 
 07 | %language ElabReflection
 08 | 
 09 | export
 10 | checkedGen : Fuel -> (a, b : Nat) -> Gen MaybeEmpty (a = b)
                                           ^^^

